Adds calculations for the long form of trace circ

--- a/bo-calc-trace-rearrange.ipynb
+++ b/bo-calc-trace-rearrange.ipynb
@@ -132,8 +132,7 @@
    "outputs": [],
    "source": [
     "trace_table = pd.DataFrame([{ \"melement\" : (-m1)^p1 * mj^p2 * mk^p3 * mu^(2 * p4 + p5) * mt^p6,\n",
-    "                              \"trace\" : 0 if (p4 == 1 and p5 == 1)\n",
-    "                                             else ((-m1)^p1 * mj^p2 * mk^p3 * mu^(2 * p4 + p5) * mt^p6).trace(),\n",
+    "                              \"trace\" : 0 if (p4 == 1 and p5 == 1) else ((-m1)^p1 * mj^p2 * mk^p3 * mu^(2 * p4 + p5) * mt^p6).trace(),\n",
     "                              \"w1\" : p1,\n",
     "                              \"w2\" : p2,\n",
     "                              \"w3\" : p3,\n",
@@ -197,14 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d835222b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#trace_poly_v1 = Z2_6.interpolation_polynomial(trace_poly_v1_zeros, trace_poly_v1_ones)\n",
-    "#trace_poly_v2 = Z2_6.interpolation_polynomial(trace_poly_v2_zeros, trace_poly_v2_ones)\n",
-    "#trace_poly_v3 = Z2_6.interpolation_polynomial(trace_poly_v3_zeros, trace_poly_v3_ones)"
+    "trace_poly_v1 = Z2_6.interpolation_polynomial(trace_poly_v1_zeros, trace_poly_v1_ones)\n",
+    "trace_poly_v2 = Z2_6.interpolation_polynomial(trace_poly_v2_zeros, trace_poly_v2_ones)\n",
+    "trace_poly_v3 = Z2_6.interpolation_polynomial(trace_poly_v3_zeros, trace_poly_v3_ones)"
    ]
   },
   {
@@ -217,22 +216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "550cf70a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'trace_poly_v1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 10\u001b[0m\n\u001b[1;32m      1\u001b[0m results \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m p1, p2, p3, p4, p5, p6 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(itertools\u001b[38;5;241m.\u001b[39mproduct(\u001b[38;5;28mrange\u001b[39m(Integer(\u001b[38;5;241m2\u001b[39m)),\n\u001b[1;32m      3\u001b[0m                                                      \u001b[38;5;28mrange\u001b[39m(Integer(\u001b[38;5;241m2\u001b[39m)),\n\u001b[1;32m      4\u001b[0m                                                      \u001b[38;5;28mrange\u001b[39m(Integer(\u001b[38;5;241m2\u001b[39m)),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m                                                      \u001b[38;5;28mrange\u001b[39m(Integer(\u001b[38;5;241m2\u001b[39m)))):\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m#Ignore impossible case (where our polys fail!)\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m     tmp1 \u001b[38;5;241m=\u001b[39m RR(\u001b[43mtrace_poly_v1\u001b[49m(p1,p2,p3,p4,p5,p6))\n\u001b[1;32m     11\u001b[0m     tmp2 \u001b[38;5;241m=\u001b[39m RR(trace_poly_v2(p1,p2,p3,p4,p5,p6))\n\u001b[1;32m     12\u001b[0m     tmp3 \u001b[38;5;241m=\u001b[39m RR(trace_poly_v3(p1,p2,p3,p4,p5,p6))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'trace_poly_v1' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = []\n",
     "for p1, p2, p3, p4, p5, p6 in list(itertools.product(range(2),\n",
@@ -270,264 +257,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2f535a2a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>trace</th>\n",
-       "      <th>v1</th>\n",
-       "      <th>v2</th>\n",
-       "      <th>v3</th>\n",
-       "      <th>melement</th>\n",
-       "      <th>w1</th>\n",
-       "      <th>w2</th>\n",
-       "      <th>w3</th>\n",
-       "      <th>w4</th>\n",
-       "      <th>w5</th>\n",
-       "      <th>w6</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-2.00000000000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[-1.00000000000000                 0]\\n[      ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.00000000000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[1.00000000000000                0]\\n[        ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-1.00000000000000*sqrt(2)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[-(0.500000000000000 - 0.500000000000000*I)*sq...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-1.00000000000000*sqrt(2)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[-(0.500000000000000 + 0.500000000000000*I)*sq...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-1.00000000000000*sqrt(2)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[-0.500000000000000*sqrt(2)  0.500000000000000...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.000000000000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[-0.500000000000000*I*sqrt(2)   -0.50000000000...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.000000000000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[                 0 1.00000000000000*I]\\n[1.00...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.000000000000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[                                             ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.000000000000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[                 0 1.00000000000000*I]\\n[1.00...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.000000000000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[ -0.500000000000000*sqrt(2) 0.500000000000000...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>98 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        trace  v1  v2  v3  \\\n",
-       "0           -2.00000000000000   0   0   0   \n",
-       "1            2.00000000000000   0   0   1   \n",
-       "2   -1.00000000000000*sqrt(2)   0   1   0   \n",
-       "2   -1.00000000000000*sqrt(2)   0   1   0   \n",
-       "2   -1.00000000000000*sqrt(2)   0   1   0   \n",
-       "..                        ...  ..  ..  ..   \n",
-       "7           0.000000000000000   1   1   1   \n",
-       "7           0.000000000000000   1   1   1   \n",
-       "7           0.000000000000000   1   1   1   \n",
-       "7           0.000000000000000   1   1   1   \n",
-       "7           0.000000000000000   1   1   1   \n",
-       "\n",
-       "                                             melement  w1  w2  w3  w4  w5  w6  \n",
-       "0   [-1.00000000000000                 0]\\n[      ...   1   0   0   0   0   0  \n",
-       "1   [1.00000000000000                0]\\n[        ...   0   0   0   0   0   0  \n",
-       "2   [-(0.500000000000000 - 0.500000000000000*I)*sq...   0   0   0   0   1   1  \n",
-       "2   [-(0.500000000000000 + 0.500000000000000*I)*sq...   0   0   1   0   1   1  \n",
-       "2   [-0.500000000000000*sqrt(2)  0.500000000000000...   0   1   1   1   0   1  \n",
-       "..                                                ...  ..  ..  ..  ..  ..  ..  \n",
-       "7   [-0.500000000000000*I*sqrt(2)   -0.50000000000...   1   1   0   1   1   1  \n",
-       "7   [                 0 1.00000000000000*I]\\n[1.00...   1   1   1   0   0   0  \n",
-       "7   [                                             ...   1   1   1   0   1   1  \n",
-       "7   [                 0 1.00000000000000*I]\\n[1.00...   1   1   1   1   1   0  \n",
-       "7   [ -0.500000000000000*sqrt(2) 0.500000000000000...   1   1   1   1   1   1  \n",
-       "\n",
-       "[98 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trace_table_idens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3ac411ce-8f30-46fd-9993-c46ffb47f1d2",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1.00000000000000*sqrt(2)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "canonical_trace_poly(v1=0,v2=1,v3=0)"
    ]
@@ -546,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "285b5784-3f2c-46bf-9473-b6f3a4c11af5",
    "metadata": {},
    "outputs": [],
@@ -561,131 +308,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "f1464a58-0c34-498f-9003-2e92bc8d7322",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.471404520791032"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "1*sqrt(2).n()/3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "b917a53b-58e1-4f6f-9751-50416176af97",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.353553400000000"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f-g"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "f2afa325-d09b-424d-b404-643cc6e00ba1",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.213388347648318"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     " sqrt(2).n()/16 + 1/8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "452ea73c-7a59-4925-b874-2dca73a661c4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.530330100000000"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a+b+e"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "id": "7546830a-841a-48ef-b0b3-7b11971b601d",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-4.70336310870456e-9"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "1/8*(1*sqrt(2).n() -1 ) -b"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "046425f0-6983-4059-a155-e5f383731c84",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.8",
+   "display_name": "SageMath 9.7",
    "language": "sage",
    "name": "sagemath"
   },
@@ -699,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
