--- a/bo-inv-calc-rearrange.ipynb
+++ b/bo-inv-calc-rearrange.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "4b0659e2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sage.rings.polynomial.pbori.pbori import BooleSet\n",
@@ -28,7 +30,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "940376d1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "B.<x1,x2,x3,x4,x5,x6> = BooleanPolynomialRing(6)\n",
@@ -482,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
