Adds up-to-date trace calculation

--- a/bo-calc-trace-rearrange.ipynb
+++ b/bo-calc-trace-rearrange.ipynb
@@ -1,20 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "657a48d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sage.rings.polynomial.pbori.pbori import BooleSet\n",
-    "import json\n",
-    "import itertools\n",
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1ab73071",
    "metadata": {},
@@ -35,9 +21,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "657a48d1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sage.rings.polynomial.pbori.pbori import BooleSet\n",
+    "import json\n",
+    "import itertools\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "fdc7ec39",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "Z2_6.<w1,w2,w3,w4,w5,w6> = BooleanPolynomialRing(6)\n",
@@ -49,17 +53,29 @@
    "id": "db74286a",
    "metadata": {},
    "source": [
-    "Here we define out trace address function"
+    "Here we define out trace address function. This is an arbitrary choice; we just need a polynomial that picks out each trace in some order as we count up in binary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "bd5a5957",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "canonical_trace_poly = 1*v1*(1-v2)*v3 - 1*v1*(1-v2)*(1-v3) + sqrt(2)*(1-v1)*v2*v3 - sqrt(2)*(1-v1)*v2*(1-v3) + 2*(1-v1)*(1-v2)*v3 - 2*(1-v1)*(1-v2)*(1-v3)"
+    "trace_polynomial = 1*v1*(1-v2)*v3 - 1*v1*(1-v2)*(1-v3) + sqrt(2)*(1-v1)*v2*v3 - sqrt(2)*(1-v1)*v2*(1-v3) + 2*(1-v1)*(1-v2)*v3 - 2*(1-v1)*(1-v2)*(1-v3)\n",
+    "\n",
+    "# trace_polynomial =\\\n",
+    "# v1*v2*v3\\\n",
+    "# +sqrt(2)*v1*(v2-1)*v3\\\n",
+    "# +2(v1-1)*v2*v3\\\n",
+    "# +1(v1-1)*(v2-1)*v3\\\n",
+    "# -2v1*v2*(v3-1)\\\n",
+    "# -0*v1*(v2-1)*(v3-1)\\\n",
+    "# -1(v1-1)*v2*(v3-1)\\\n",
+    "# -0*(v1-1)*(v2-1)*(v3-1)\n"
    ]
   },
   {
@@ -74,7 +90,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "0960ee7e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "m1 = Matrix([[1,0],\n",
@@ -89,7 +107,7 @@
     "mk = Matrix([[1j, 0],\n",
     "             [0, -1j]])\n",
     "\n",
-    "mu = 1/2 * ((-m1) + mi + mj + mk)\n",
+    "mu = -1/2 * ((m1) + mi + mj + mk)\n",
     "\n",
     "mt = 1/sqrt(2) * (m1 + mi)"
    ]
@@ -99,21 +117,22 @@
    "id": "0493ec04",
    "metadata": {},
    "source": [
-    "We produce a table of inputs and outputs for our trace_address function. We also specifically omit the last case, as the solver has trouble with 0 occurring twice."
+    "We produce a table of inputs and outputs for our trace_address function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "id": "b5c43227",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "traces = pd.DataFrame([{\"trace\" : canonical_trace_poly(v1=p1,v2=p2,v3=p3),\n",
+    "traces = pd.DataFrame([{\"trace\" : trace_polynomial(v1=p1,v2=p2,v3=p3),\n",
     "                        \"v1\" : p1,\n",
     "                        \"v2\" : p2,\n",
-    "                        \"v3\" : p3 } for p1, p2, p3 in itertools.product(range(2),range(2),range(2))])\n",
-    "#traces = traces[traces.v2 + traces.v3 != 2]"
+    "                        \"v3\" : p3 } for p1, p2, p3 in itertools.product(range(2),range(2),range(2))])"
    ]
   },
   {
@@ -128,11 +147,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "a370ef14",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "trace_table = pd.DataFrame([{ \"melement\" : (-m1)^p1 * mj^p2 * mk^p3 * mu^(2 * p4 + p5) * mt^p6,\n",
-    "                              \"trace\" : 0 if (p4 == 1 and p5 == 1) else ((-m1)^p1 * mj^p2 * mk^p3 * mu^(2 * p4 + p5) * mt^p6).trace(),\n",
+    "                              \"trace\" : 0 if (p4 == 1 and p5 == 1) else ((-m1)^p1 * mj^p2 * mk^p3 * mu^(2 * p4 + p5) * mt^p6).trace(),                         \n",
     "                              \"w1\" : p1,\n",
     "                              \"w2\" : p2,\n",
     "                              \"w3\" : p3,\n",
@@ -142,7 +163,8 @@
     "                                              for p1, p2, p3, p4, p5, p6\n",
     "                                              in itertools.product(range(2),range(2),range(2),range(2),range(2),range(2))])\n",
     "\n",
-    "#trace_table = trace_table[(trace_table.w4 + trace_table.w5) != 2]"
+    "#Exclude the cases that do not occur\n",
+    "trace_table = trace_table[(trace_table.w4 + trace_table.w5) != 2]"
    ]
   },
   {
@@ -150,14 +172,16 @@
    "id": "4c870a37",
    "metadata": {},
    "source": [
-    "Now we join the tables across the common trace, so that we can associate the 6 bit standard form to the 3 bit trace form. This gives the data of the map $f$ that we are after."
+    "Now we join the tables across the common trace, so that we can associate the 6 bit standard form to the 3 bit trace form. This gives the data of the map $f$ that we are after. We can pair the element, its trace, its 6 bit representation, and its 3 bit representation in each record."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "id": "8108dabc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "trace_table_idens = traces.join(trace_table.set_index(\"trace\"), on = \"trace\")"
@@ -175,7 +199,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "52217535",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "trace_poly_v1_zeros = trace_table_idens[trace_table_idens.v1 == 0].loc[:,[\"w1\",\"w2\",\"w3\",\"w4\",\"w5\",\"w6\"]].values\n",
@@ -196,14 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d835222b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "trace_poly_v1 = Z2_6.interpolation_polynomial(trace_poly_v1_zeros, trace_poly_v1_ones)\n",
     "trace_poly_v2 = Z2_6.interpolation_polynomial(trace_poly_v2_zeros, trace_poly_v2_ones)\n",
-    "trace_poly_v3 = Z2_6.interpolation_polynomial(trace_poly_v3_zeros, trace_poly_v3_ones)"
+    "#Currently cases the Sage kernel to crash if uncommented.\n",
+    "#trace_poly_v3 = Z2_6.interpolation_polynomial(trace_poly_v3_zeros, trace_poly_v3_ones)"
    ]
   },
   {
@@ -216,10 +245,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "550cf70a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "results = []\n",
     "for p1, p2, p3, p4, p5, p6 in list(itertools.product(range(2),\n",
@@ -248,123 +285,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7371a049",
+   "id": "96320f42-d4b5-45ba-bd54-5f9c764ef13c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "results[11]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f535a2a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "trace_table_idens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ac411ce-8f30-46fd-9993-c46ffb47f1d2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "canonical_trace_poly(v1=0,v2=1,v3=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b95b4430-be59-4bc4-8e42-508da32d8744",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "sum(trace_table.trace.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "285b5784-3f2c-46bf-9473-b6f3a4c11af5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=0.3017767\n",
-    "b=0.0517767\n",
-    "d=0.125\n",
-    "e=0.1767767\n",
-    "f=0.4267767\n",
-    "g=0.0732233"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1464a58-0c34-498f-9003-2e92bc8d7322",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "1*sqrt(2).n()/3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b917a53b-58e1-4f6f-9751-50416176af97",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "f-g"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2afa325-d09b-424d-b404-643cc6e00ba1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    " sqrt(2).n()/16 + 1/8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "452ea73c-7a59-4925-b874-2dca73a661c4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "a+b+e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7546830a-841a-48ef-b0b3-7b11971b601d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "1/8*(1*sqrt(2).n() -1 ) -b"
-   ]
+   "source": []
   }
  ],
  "metadata": {
