--- a/bo-trace-circ-sage.ipynb
+++ b/bo-trace-circ-sage.ipynb
@@ -2,15 +2,126 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "75979dd7-6b5c-414a-9614-430942e876d4",
+   "id": "1c02b931-f98c-4c9a-8dcd-ff1aff1e8f67",
    "metadata": {},
    "source": [
-    "Some Calcs for the SparsePauliOp derivation"
+    "Here we derive the \"long form\" (for lack of better terminology) of the trace calculation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
+   "id": "e21cd8ad-5304-4bad-a764-381da7b78e35",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "from math import sqrt as sqrt\n",
+    "from qiskit.quantum_info import Operator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "904955d4-829c-428c-9ec4-1ff945486348",
+   "metadata": {},
+   "source": [
+    "We load the known traces for the fundemental representation of the binary octohedral group into a list along the diagonal of a matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7e38ebe8-d51e-401a-a951-3c4bd3f505df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "traces = [2.00000000000000, 1.00000000000000*sqrt(2), -1.00000000000000,\n",
+    "       -1.00000000000000*sqrt(2), -1.00000000000000, 0, 0, 0,\n",
+    "       0.000000000000000, 0, -1.00000000000000, -1.00000000000000*sqrt(2),\n",
+    "       1.00000000000000, 1.00000000000000*sqrt(2), 0, 0, 0, 0,\n",
+    "       -1.00000000000000, 0, 1.00000000000000, 0, 0, 0, 0,\n",
+    "       1.00000000000000*sqrt(2), 1.00000000000000, 0, -1.00000000000000,\n",
+    "       -1.00000000000000*sqrt(2), 0, 0, -2.00000000000000,\n",
+    "       -1.00000000000000*sqrt(2), 1.00000000000000,\n",
+    "       1.00000000000000*sqrt(2), 1.00000000000000, 0, 0, 0,\n",
+    "       0.000000000000000, 0, 1.00000000000000, 1.00000000000000*sqrt(2),\n",
+    "       -1.00000000000000, -1.00000000000000*sqrt(2), 0, 0, 0, 0,\n",
+    "       1.00000000000000, 0, -1.00000000000000, 0, 0, 0, 0,\n",
+    "       -1.00000000000000*sqrt(2), -1.00000000000000, 0, 1.00000000000000,\n",
+    "       1.00000000000000*sqrt(2), 0, 0]\n",
+    "\n",
+    "trace_mag = np.linalg.norm(traces)\n",
+    "\n",
+    "trace_ham = np.diag(traces)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c164a2f-3d47-48d1-95bd-7108d813dde0",
+   "metadata": {},
+   "source": [
+    "The [SparsePauliOp](https://qiskit.org/documentation/stubs/qiskit.quantum_info.SparsePauliOp.html) function from Qiskit can transform an operator into a Pauli basis representation automagically for us. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "551dd3a1-6df6-477c-b62e-48556b7b6511",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "zbase_trace = SparsePauliOp.from_operator(trace_ham)\n",
+    "zbase_trace_operator = zbase_trace.to_operator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "781c2bdc-1e98-451a-8407-72d4570ec513",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SparsePauliOp(['ZIIIZI', 'ZIIIZZ', 'ZIIZZI', 'ZIIZZZ', 'ZIZIZI', 'ZIZIZZ', 'ZIZZZI', 'ZIZZZZ', 'ZZIIZI', 'ZZIIZZ', 'ZZIZII', 'ZZIZIZ', 'ZZIZZI', 'ZZIZZZ', 'ZZZIZI', 'ZZZIZZ', 'ZZZZII', 'ZZZZIZ', 'ZZZZZI', 'ZZZZZZ'],\n",
+       "              coeffs=[ 0.3017767+0.j, -0.0517767+0.j,  0.3017767+0.j, -0.0517767+0.j,\n",
+       "  0.125    +0.j,  0.125    +0.j,  0.125    +0.j,  0.125    +0.j,\n",
+       "  0.3017767+0.j, -0.0517767+0.j, -0.1767767+0.j,  0.1767767+0.j,\n",
+       "  0.125    +0.j,  0.125    +0.j, -0.125    +0.j, -0.125    +0.j,\n",
+       "  0.4267767+0.j,  0.0732233+0.j,  0.3017767+0.j, -0.0517767+0.j])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zbase_trace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f21e0d0-f625-4f40-b770-7798b023082e",
+   "metadata": {},
+   "source": [
+    "This gives us the polynomial form of the operator we are after in a rather annoying form. For whatever reason it decides to give us floats. After some pen and paper work you can work out that the coefficients are:\n",
+    "\n",
+    "After that we go real simple and just make a polynomial ring and manually sort them out into our prefered lexical order. There may be a clever way to do this automatically. This author is not a Sagemath expert though."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "0ab1a622-583a-455f-a333-7c60555e068d",
    "metadata": {
     "tags": []
@@ -22,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "31760273-dc60-4250-85d2-39f51077d588",
    "metadata": {
     "tags": []
@@ -76,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "a9b64909-1787-4e94-b42b-63794d3c6bc4",
    "metadata": {
     "tags": []
@@ -88,7 +199,7 @@
        "-b Z_{1} Z_{2} Z_{3} Z_{4} Z_{5} Z_{6} + a Z_{1} Z_{2} Z_{3} Z_{4} Z_{5} - d Z_{1} Z_{2} Z_{3} Z_{5} Z_{6} + d Z_{1} Z_{2} Z_{4} Z_{5} Z_{6} + d Z_{1} Z_{3} Z_{4} Z_{5} Z_{6} + g Z_{1} Z_{2} Z_{3} Z_{4} Z_{6} - b Z_{1} Z_{2} Z_{5} Z_{6} - b Z_{1} Z_{4} Z_{5} Z_{6} - d Z_{1} Z_{2} Z_{3} Z_{5} + d Z_{1} Z_{2} Z_{4} Z_{5} + d Z_{1} Z_{3} Z_{4} Z_{5} + d Z_{1} Z_{3} Z_{5} Z_{6} + e Z_{1} Z_{2} Z_{4} Z_{6} + f Z_{1} Z_{2} Z_{3} Z_{4} + a Z_{1} Z_{2} Z_{5} + a Z_{1} Z_{4} Z_{5} - b Z_{1} Z_{5} Z_{6} + d Z_{1} Z_{3} Z_{5} - e Z_{1} Z_{2} Z_{4} + a Z_{1} Z_{5}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "11b1e530-c3f1-4e63-906e-934651f9bcf7",
    "metadata": {
     "tags": []
@@ -111,7 +222,7 @@
        "-b*Z1*Z2*Z3*Z4*Z5*Z6 + a*Z1*Z2*Z3*Z4*Z5 - d*Z1*Z2*Z3*Z5*Z6 + d*Z1*Z2*Z4*Z5*Z6 + d*Z1*Z3*Z4*Z5*Z6 + g*Z1*Z2*Z3*Z4*Z6 - b*Z1*Z2*Z5*Z6 - b*Z1*Z4*Z5*Z6 - d*Z1*Z2*Z3*Z5 + d*Z1*Z2*Z4*Z5 + d*Z1*Z3*Z4*Z5 + d*Z1*Z3*Z5*Z6 + e*Z1*Z2*Z4*Z6 + f*Z1*Z2*Z3*Z4 + a*Z1*Z2*Z5 + a*Z1*Z4*Z5 - b*Z1*Z5*Z6 + d*Z1*Z3*Z5 - e*Z1*Z2*Z4 + a*Z1*Z5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "e9a5d20a-4d14-49e3-aca3-8855a63bf8d3",
    "metadata": {
     "tags": []
@@ -134,7 +245,7 @@
        "(-1) * (b*Z2*Z3*Z4*Z5*Z6 - a*Z2*Z3*Z4*Z5 + d*Z2*Z3*Z5*Z6 - d*Z2*Z4*Z5*Z6 - d*Z3*Z4*Z5*Z6 - g*Z2*Z3*Z4*Z6 + b*Z2*Z5*Z6 + b*Z4*Z5*Z6 + d*Z2*Z3*Z5 - d*Z2*Z4*Z5 - d*Z3*Z4*Z5 - d*Z3*Z5*Z6 - e*Z2*Z4*Z6 - f*Z2*Z3*Z4 - a*Z2*Z5 - a*Z4*Z5 + b*Z5*Z6 - d*Z3*Z5 + e*Z2*Z4 - a*Z5)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "b97ad4fe-ace8-4a7e-909b-fbb37b8f9fd8",
    "metadata": {
     "tags": []
@@ -157,7 +268,7 @@
        "-b*Z2*Z3*Z4*Z5*Z6 + a*Z2*Z3*Z4*Z5 - d*Z2*Z3*Z5*Z6 + d*Z2*Z4*Z5*Z6 + d*Z3*Z4*Z5*Z6 + g*Z2*Z3*Z4*Z6 - b*Z2*Z5*Z6 - b*Z4*Z5*Z6 - d*Z2*Z3*Z5 + d*Z2*Z4*Z5 + d*Z3*Z4*Z5 + d*Z3*Z5*Z6 + e*Z2*Z4*Z6 + f*Z2*Z3*Z4 + a*Z2*Z5 + a*Z4*Z5 - b*Z5*Z6 + d*Z3*Z5 - e*Z2*Z4 + a*Z5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
