--- a/bo-inv-calc-rearrange.ipynb
+++ b/bo-inv-calc-rearrange.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4b0659e2",
    "metadata": {
     "tags": []
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "940376d1",
    "metadata": {
     "tags": []
@@ -55,9 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "c33cc932",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "canonical_forms = pd.DataFrame(data = [{ \"element\" : str((-1)**p1 * j**p2 * k**p3 * u**(2*p4 + p5) * t**p6),\n",
@@ -105,9 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0cae9a28",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "inverse_table_idens = inverse_table.join(canonical_forms.set_index(\"element\"),\n",
@@ -124,9 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "5c6afda0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "z1_zeros = inverse_table_idens[inverse_table_idens.z1 == 0].loc[:,[\"x1\",\"x2\",\"x3\",\"x4\",\"x5\",\"x6\"]].values\n",
@@ -162,9 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c4012094",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "z1p = B.interpolation_polynomial(z1_zeros,z1_ones)\n",
@@ -185,9 +193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "dabbd9d0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -245,51 +255,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "8bc576f0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "x_{1} + x_{2} x_{3} x_{6} + x_{2} x_{3} + x_{2} x_{5} x_{6} + x_{2} x_{6} + x_{2} + x_{3} x_{4} x_{6} + x_{3} x_{6} + x_{3} + x_{4} x_{6} + x_{6}"
+       "x1 + x2*x3*x6 + x2*x3 + x2*x5*x6 + x2*x6 + x2 + x3*x4*x6 + x3*x6 + x3 + x4*x6 + x6"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "latex(z1p)"
+    "z1p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "7af6032f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "x1 + x2*x5 + x3*x4 + x4 + 1"
+       "x2*x4 + x2 + x3*x4 + x3*x5 + x4 + x5 + 1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z1p(x6=1)"
+    "z3p(x6=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "3120036c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -297,7 +313,7 @@
        "x2*x5 + x2 + x3*x4 + x3 + x4*x6"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
