--- a/bo-calc-trace-rearrange.ipynb
+++ b/bo-calc-trace-rearrange.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "657a48d1",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "fdc7ec39",
    "metadata": {
     "tags": []
@@ -58,24 +58,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "bd5a5957",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "trace_polynomial = 1*v1*(1-v2)*v3 - 1*v1*(1-v2)*(1-v3) + sqrt(2)*(1-v1)*v2*v3 - sqrt(2)*(1-v1)*v2*(1-v3) + 2*(1-v1)*(1-v2)*v3 - 2*(1-v1)*(1-v2)*(1-v3)\n",
+    "#trace_polynomial = 1*v1*(1-v2)*v3 - 1*v1*(1-v2)*(1-v3) + sqrt(2)*(1-v1)*v2*v3 - sqrt(2)*(1-v1)*v2*(1-v3) + 2*(1-v1)*(1-v2)*v3 - 2*(1-v1)*(1-v2)*(1-v3)\n",
     "\n",
     "# trace_polynomial =\\\n",
-    "# v1*v2*v3\\\n",
-    "# +sqrt(2)*v1*(v2-1)*v3\\\n",
-    "# +2(v1-1)*v2*v3\\\n",
-    "# +1(v1-1)*(v2-1)*v3\\\n",
-    "# -2v1*v2*(v3-1)\\\n",
-    "# -0*v1*(v2-1)*(v3-1)\\\n",
-    "# -1(v1-1)*v2*(v3-1)\\\n",
-    "# -0*(v1-1)*(v2-1)*(v3-1)\n"
+    "# - 2 * v1 * v2 * v3 \\\n",
+    "# + sqrt(2) * v1 * (v2-1) * v3 \\\n",
+    "# + 1 * (v1-1) * v2 * v3 \\\n",
+    "# + 0 * (v1-1) * (v2-1) * v3 \\\n",
+    "# - 2 * v1 * v2 * (v3-1) \\\n",
+    "# + sqrt(2) * v1 * (v2-1) * (v3-1) \\\n",
+    "# + 1 * (v1-1) * v2 * (v3-1) \\\n",
+    "# + 0 * (v1-1) * (v2-1) * (v3-1)\n",
+    "\n",
+    "trace_polynomial = (\n",
+    "  0 * (v1-1) * (v2-1) * (v3-1) #000\n",
+    "+ 0 * (v1-1) * (v2-1) * v3 #001\n",
+    "+ 2 * (v1-1) * v2 * (v3-1) #010\n",
+    "+ 2 * (v1-1) * v2 * v3 #011\n",
+    "+ 1 * v1 * (v2-1) * (v3-1) #100\n",
+    "+ 1 * v1 * (v2-1) * v3 #101\n",
+    "- sqrt(2) * v1 * v2 * (v3-1) #110\n",
+    "- sqrt(2) * v1 * v2 * v3 #111\n",
+    ")\n",
+    "\n",
+    "# trace_polynomial = (\n",
+    "#   0 * (v1-1) * (v2-1) * (v3-1) #000\n",
+    "# - 0 * v1 * (v2-1) * (v3-1) #100\n",
+    "# + 2 * (v1-1) * v2 * (v3-1) #010\n",
+    "# + 2 * v1 * v2 * (v3-1) #110\n",
+    "# + 1 * (v1-1) * (v2-1) * v3 #001\n",
+    "# + 1 * v1 * (v2-1) * v3 #101\n",
+    "# - sqrt(2) * (v1-1) * v2 * v3 #011\n",
+    "# - sqrt(2) * v1 * v2 * v3 #111\n",
+    "# )"
    ]
   },
   {
@@ -88,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0960ee7e",
    "metadata": {
     "tags": []
@@ -122,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b5c43227",
    "metadata": {
     "tags": []
@@ -145,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "a370ef14",
    "metadata": {
     "tags": []
@@ -164,7 +186,10 @@
     "                                              in itertools.product(range(2),range(2),range(2),range(2),range(2),range(2))])\n",
     "\n",
     "#Exclude the cases that do not occur\n",
-    "trace_table = trace_table[(trace_table.w4 + trace_table.w5) != 2]"
+    "trace_table = trace_table[(trace_table.w4 + trace_table.w5) != 2]\n",
+    "\n",
+    "#Exclude negative (degen) values\n",
+    "#trace_table = trace_table[trace_table.w1 != 1]"
    ]
   },
   {
@@ -177,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "8108dabc",
    "metadata": {
     "tags": []
@@ -197,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "52217535",
    "metadata": {
     "tags": []
@@ -222,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "d835222b",
    "metadata": {
     "tags": []
@@ -245,15 +270,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "550cf70a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
+     "ename": "NameError",
+     "evalue": "name 'trace_poly_v3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [25]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m tmp1 \u001b[38;5;241m=\u001b[39m RR(trace_poly_v1(p1,p2,p3,p4,p5,p6))\n\u001b[1;32m     11\u001b[0m tmp2 \u001b[38;5;241m=\u001b[39m RR(trace_poly_v2(p1,p2,p3,p4,p5,p6))\n\u001b[0;32m---> 12\u001b[0m tmp3 \u001b[38;5;241m=\u001b[39m RR(\u001b[43mtrace_poly_v3\u001b[49m(p1,p2,p3,p4,p5,p6))\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (p4 \u001b[38;5;129;01mand\u001b[39;00m p5):\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'trace_poly_v3' is not defined"
      ]
     }
    ],
@@ -284,8 +315,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "id": "bda367b2-6802-46d0-bddb-8c0d26e02eae",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0, 0, 0, 1, 1),\n",
+       " (0, 0, 1, 0, 0, 0),\n",
+       " (0, 0, 1, 0, 0, 1),\n",
+       " (0, 1, 0, 0, 0, 0),\n",
+       " (0, 1, 0, 0, 0, 1),\n",
+       " (0, 1, 0, 0, 1, 1),\n",
+       " (0, 1, 0, 1, 0, 1),\n",
+       " (0, 1, 1, 0, 0, 0),\n",
+       " (0, 1, 1, 1, 0, 1),\n",
+       " (1, 0, 0, 0, 1, 1),\n",
+       " (1, 0, 1, 0, 0, 0),\n",
+       " (1, 0, 1, 0, 0, 1),\n",
+       " (1, 1, 0, 0, 0, 0),\n",
+       " (1, 1, 0, 0, 0, 1),\n",
+       " (1, 1, 0, 0, 1, 1),\n",
+       " (1, 1, 0, 1, 0, 1),\n",
+       " (1, 1, 1, 0, 0, 0),\n",
+       " (1, 1, 1, 1, 0, 1)}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trace_poly_v3_zeros.intersection(trace_poly_v3_ones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "96320f42-d4b5-45ba-bd54-5f9c764ef13c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trace</th>\n",
+       "      <th>v1</th>\n",
+       "      <th>v2</th>\n",
+       "      <th>v3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.00000000000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.00000000000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.00000000000000*sqrt(2)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-1.00000000000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-2.00000000000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-1.00000000000000*sqrt(2)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       trace  v1  v2  v3\n",
+       "0                          0   0   0   0\n",
+       "1           1.00000000000000   0   0   1\n",
+       "2           2.00000000000000   0   1   0\n",
+       "3   1.00000000000000*sqrt(2)   0   1   1\n",
+       "4                          0   1   0   0\n",
+       "5          -1.00000000000000   1   0   1\n",
+       "6          -2.00000000000000   1   1   0\n",
+       "7  -1.00000000000000*sqrt(2)   1   1   1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "traces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "267bd97c-a810-427e-8a22-39784cebe50e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.00000000000000*sqrt(2)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trace_polynomial(v1=1,v2=1,v3=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "22a0c975-3aab-41a4-bf9c-e844d58ba99c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "w_{2} w_{3} w_{4} w_{6} + w_{2} w_{3} w_{4} + w_{2} w_{3} w_{5} w_{6} + w_{2} w_{3} w_{5} + w_{2} w_{3} w_{6} + w_{2} w_{3} + w_{2} w_{4} w_{6} + w_{2} w_{4} + w_{2} w_{5} + w_{2} + w_{3} w_{4} + w_{3} w_{5} w_{6} + w_{3} w_{5} + w_{3} + w_{4} w_{6} + w_{4} + w_{5} + 1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latex(trace_poly_v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6a0be42-c081-48cc-ac53-445546454b5e",
    "metadata": {},
    "outputs": [],
    "source": []
