--- a/bo-calc-trace-rearrange.ipynb
+++ b/bo-calc-trace-rearrange.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "657a48d1",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "fdc7ec39",
    "metadata": {
     "tags": []
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "bd5a5957",
    "metadata": {
     "tags": []
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "0960ee7e",
    "metadata": {
     "tags": []
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "b5c43227",
    "metadata": {
     "tags": []
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "a370ef14",
    "metadata": {
     "tags": []
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "8108dabc",
    "metadata": {
     "tags": []
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "52217535",
    "metadata": {
     "tags": []
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "d835222b",
    "metadata": {
     "tags": []
@@ -249,21 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "550cf70a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'canonical_trace_poly' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (p4 \u001b[38;5;129;01mand\u001b[39;00m p5):\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m test \u001b[38;5;241m=\u001b[39m \u001b[43mcanonical_trace_poly\u001b[49m(v1\u001b[38;5;241m=\u001b[39mtmp1,v2\u001b[38;5;241m=\u001b[39mtmp2,v3\u001b[38;5;241m=\u001b[39mtmp3)\n\u001b[1;32m     18\u001b[0m ground_mat \u001b[38;5;241m=\u001b[39m ((\u001b[38;5;241m-\u001b[39mm1)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mp1 \u001b[38;5;241m*\u001b[39m mj\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mp2 \u001b[38;5;241m*\u001b[39m mk\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mp3 \u001b[38;5;241m*\u001b[39m mu\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(Integer(\u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m p4 \u001b[38;5;241m+\u001b[39m p5) \u001b[38;5;241m*\u001b[39m mt\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mp6)\n\u001b[1;32m     19\u001b[0m ground \u001b[38;5;241m=\u001b[39m ground_mat\u001b[38;5;241m.\u001b[39mtrace()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'canonical_trace_poly' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
@@ -283,7 +279,7 @@
     "    \n",
     "    if (p4 and p5):\n",
     "        continue\n",
-    "    test = canonical_trace_poly(v1=tmp1,v2=tmp2,v3=tmp3)\n",
+    "    test = trace_polynomial(v1=tmp1,v2=tmp2,v3=tmp3)\n",
     "        \n",
     "    ground_mat = ((-m1)^p1 * mj^p2 * mk^p3 * mu^(2 * p4 + p5) * mt^p6)\n",
     "    ground = ground_mat.trace()\n",
@@ -291,6 +287,83 @@
     "\n",
     "print(all(results))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b09b9ba7-3f87-4f54-8571-786d461b6ec8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "w1*w4*w6 + w1*w4 + w1*w5*w6 + w1*w5 + w2*w3*w4*w6 + w2*w3*w4 + w2*w5 + w2*w6 + w3*w4*w6 + w3*w5*w6 + w3*w5 + w3*w6 + w4*w6 + w4 + w5 + w6"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trace_poly_v1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c011e9d2-38f8-4151-b8f9-76ed4ba20011",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "w1*w2*w3*w4*w6 + w1*w2*w3*w4 + w1*w2*w3*w5*w6 + w1*w2*w3*w5 + w1*w2*w3*w6 + w1*w2*w3 + w1*w2*w4*w6 + w1*w2*w4 + w1*w2*w5 + w1*w2 + w1*w3*w4 + w1*w3*w5*w6 + w1*w3*w5 + w1*w3 + w1*w5*w6 + w1 + w2*w3*w4*w6 + w2*w3*w4 + w2*w3*w5*w6 + w2*w4*w6 + w2*w5*w6 + w2*w5 + w3*w5*w6 + w3*w5 + w4*w6"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trace_poly_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "31280120-273a-41fb-9ff8-6b4f1ecb5014",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "w1*w2*w3*w4*w6 + w1*w2*w3*w4 + w1*w2*w3*w5*w6 + w1*w2*w3*w5 + w1*w2*w3*w6 + w1*w2*w3 + w1*w2*w4*w6 + w1*w2*w4 + w1*w2*w5 + w1*w2 + w1*w3*w4 + w1*w3*w5*w6 + w1*w3*w5 + w1*w3 + w1*w5*w6 + w1 + w2*w3*w5 + w2*w3*w6 + w2*w3 + w2*w4 + w2*w5*w6 + w2 + w3*w4 + w3 + w4 + w5 + 1"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trace_poly_v3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99b79a22-7ed3-4d7c-9adc-61ff738cc4e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
